[package]
name = "atme"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration", "entity", "api", "service"]

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
sea-orm = { version = "1.1.14", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-json"
] }

[dependencies]
atme-api = { path = "api" }

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
